chore: add initial prisma schema

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@
 
 DATABASE_URL="postgres://postgres.cgpidapymlfhyfrqmkwq:aq6W2hWsrLqLveWR@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
 
+# postgresql://postgres:[YOUR-PASSWORD]@db.cgpidapymlfhyfrqmkwq.supabase.co:5432/postgres
